Project

General

Profile

Actions

Bug #15338

closed

rados cleanup doesn't always work

Added by David Zafman about 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ ./rados -p test bench 30 write
^C
$ ./rados -p test cleanup
error during cleanup: -2
error 2: (2) No such file or directory

We need to be careful that rados cleanup doesn't remove all objects like the new purge command and wipe out everything in a pool, while at the same time there are cases where the benchmark_last_metadata is missing.

Actions #1

Updated by David Zafman about 8 years ago

  • Status changed from New to In Progress
Actions #2

Updated by David Zafman almost 8 years ago

  • Status changed from In Progress to Resolved

4140c320cee3e8fc1f25058ef05ac8fa531ff065

Actions

Also available in: Atom PDF