common: Fix ObjBencher clean_up when no prefix specified

By default remove all objects named benchmark_data_{hostname} when
there is no benchmark_last_metadata present.

Fixes: http://tracker.ceph.com/issues/15338

Signed-off-by: David Zafman <dzafman@redhat.com>